fix cmake warning about find lqr-1 module. rename script and adjust cmake variable typos accordingly.

--- a/core/dplugins/editor/transform/CMakeLists.txt
+++ b/core/dplugins/editor/transform/CMakeLists.txt
@@ -11,6 +11,6 @@ add_subdirectory(perspective)
 add_subdirectory(ratiocrop)
 add_subdirectory(shear)
 
-if(Lqr-1_FOUND)
+if(LQR-1_FOUND)
     add_subdirectory(contentawareresize)
 endif()
