--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -443,7 +443,7 @@ endif()
 find_package(Doxygen)
 
 if(NOT CMAKE_SYSTEM_NAME STREQUAL FreeBSD)
-    find_package(Lqr-1)
+    find_package(LQR-1)
 endif()
 
 if(BUILD_WITH_CCACHE)
@@ -620,7 +620,7 @@ MACRO_BOOL_TO_01(KF5NotifyConfig_FOUND        HAVE_KNOTIFYCONFIG)
 MACRO_BOOL_TO_01(KF5KIO_FOUND                 HAVE_KIO)
 MACRO_BOOL_TO_01(KF5IconThemes_FOUND          HAVE_KICONTHEMES)
 MACRO_BOOL_TO_01(LensFun_FOUND                HAVE_LENSFUN)
-MACRO_BOOL_TO_01(Lqr-1_FOUND                  HAVE_LIBLQR_1)
+MACRO_BOOL_TO_01(LQR-1_FOUND                  HAVE_LIBLQR_1)
 MACRO_BOOL_TO_01(Gphoto2_FOUND                HAVE_GPHOTO2)
 MACRO_BOOL_TO_01(Jasper_FOUND                 HAVE_JASPER)
 MACRO_BOOL_TO_01(Eigen3_FOUND                 HAVE_EIGEN3)
@@ -690,7 +690,7 @@ PRINT_OPTIONAL_LIBRARY_STATUS("libknotifications" "https://invent.kde.org/framew
 PRINT_OPTIONAL_LIBRARY_STATUS("libknotifyconfig"  "https://invent.kde.org/frameworks/knotifications"                "(version >= ${KF5_MIN_VERSION})"       "digiKam will be compiled without KDE desktop notify configuration support."  KF5NotifyConfig_FOUND)
 PRINT_OPTIONAL_LIBRARY_STATUS("libksane"          "https://invent.kde.org/graphics/libksane"                        "(version >= ${KSANE_MIN_VERSION})"     "digiKam will be compiled without flat scanners support."                     KF5Sane_FOUND)
 PRINT_OPTIONAL_LIBRARY_STATUS("liblensfun"        "https://lensfun.sourceforge.net"                                 "(version >= 0.2.6)"                    "digiKam will be compiled without Lens Auto Correction tool support."         LensFun_FOUND)
-PRINT_OPTIONAL_LIBRARY_STATUS("liblqr-1"          "https://liblqr.wikidot.com"                                      "(version >= 0.4.1)"                    "digiKam will be compiled without Contents Aware Resizer tool support."       Lqr-1_FOUND)
+PRINT_OPTIONAL_LIBRARY_STATUS("liblqr-1"          "https://liblqr.wikidot.com"                                      "(version >= 0.4.1)"                    "digiKam will be compiled without Contents Aware Resizer tool support."       LQR-1_FOUND)
 PRINT_OPTIONAL_LIBRARY_STATUS("libmarble"         "https://invent.kde.org/education/marble"                         "(version >= 0.22.0)"                   "digiKam will be compiled without geolocation maps support."                  Marble_FOUND)
 PRINT_OPTIONAL_LIBRARY_STATUS("libqtav"           "https://github.com/wang-bin/QtAV"                                "(version >= ${QTAV_MIN_VERSION})"      "digiKam will be compiled without Media Player support."                      QtAV_FOUND)
 PRINT_OPTIONAL_LIBRARY_STATUS("libthreadweaver"   "https://invent.kde.org/frameworks/threadweaver"                  "(version >= ${KF5_MIN_VERSION})"       "digiKam will be compiled without Panorama support."                          KF5ThreadWeaver_FOUND)
