remove compiler warnings about deprecated legacy types as uint8/16/32. We needs to port later TIFF loader code with more modern types.

--- a/core/dplugins/dimg/tiff/CMakeLists.txt
+++ b/core/dplugins/dimg/tiff/CMakeLists.txt
@@ -6,6 +6,10 @@
 
 APPLY_COMMON_POLICIES()
 
+# Libtiff generate warnings about deprecated legacy uint32, uint16, uint8 types.
+# Remove this line when Tiff loader will used modern types instead.
+REMOVE_COMPILER_WARNINGS("-Wdeprecated-declarations")
+
 include(MacroDPlugins)
 
 include_directories($<TARGET_PROPERTY:Qt${QT_VERSION_MAJOR}::Gui,INTERFACE_INCLUDE_DIRECTORIES>
