--- a/core/app/utils/digikam_config.h.cmake.in
+++ b/core/app/utils/digikam_config.h.cmake.in
@@ -48,6 +48,9 @@
 /* Define to 1 if an external x265 shared library have been found */
 #cmakedefine HAVE_X265 1
 
+/* Define to 1 if an external Heif shared library have been found */
+#cmakedefine HAVE_HEIF 1
+
 /* The Eigen3 version string, if found, or an empty string otherwise */
 #define EIGEN3_VERSION_STRING "${EIGEN3_VERSION}"
 
